# poltype2

./: .gitignore  .poltype.py.swp  LICENSE  ModifiedResidue.prm  PymolTinkerWrapper.py  README  README.FIRST  README.HELP  README.INSTALL  README.MANIFEST  README.MD  README.MULTIPOLE  README.VERSION  README.VERSIONHISTORY  README.change_history  README.md  README.version  README_BAR.MD  README_BOXSETUP.MD  README_DATABASEPARSER.MD  README_ELECTROSTATICPOTENTIAL.MD  README_EQUILIBRIATION.MD  README_FIRST.MD  README_FIRSTOPT.MD  README_FRAGMENTER.MD  README_HELP.MD  README_INSTALL.MD  README_MANIFEST.MD  README_MINIMIZATION.MD  README_MODIFIEDRESIDUE.MD  README_MULTIPOLE.MD  README_OPTIMIZATION.MD  README_PDBXYZ.MD  README_PLOTS.MD  README_POLTYPE.MD  README_PRODUCTIONDYNAMICS.MD  README_RESTRAINTS.MD  README_RINGS.MD  README_TODO.MD  README_TORSION.MD  (+34 more)
BasisSets/: 6-311+g_st_.0.gbs  6-311g_st_.0.gbs  6-311g_st__st_.0.gbs  6-311g_st__st_.0_iodine.gbs  6-31g_st_.0.gbs  aug-cc-pvtz-pp.0.gbs  aug-cc-pvtz.1.gbs  def2-svp.1.gbs  def2-tzvpp.1.gbs  lanl2dz_ecp.0.gbs
Environments/: ANI.yml  dockingprep.yml  environment-psi417.yml  environment.yml  oldpy3.yml
FennixModels/: LICENSE.txt  readme
ForceBalanceWrapperExamples/: ExpHalogenData.csv
ModifiedResidueLibraries/: SMARTSToTypeLib.txt  lib.bio18_conv1.txt  residue_connect.txt
ParameterFiles/: ModifiedResidue.prm  SMARTsToSoluteRadiiMap.txt  amoeba09.prm  amoeba21.prm  amoeba21polarcommenttoparameters.txt  amoeba21polarize.prm  amoeba21smartstoclass.txt  amoeba_and_amoebaplus_polarize.prm  amoebaplus21_header.prm  (+10 more)
(+17641 files in other folders)
