[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poltype2"
version = "0.0.0-dev"
description = "Automated AMOEBA force-field parameterisation for small molecules"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0" }
dependencies = [
    "rdkit",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
]

[project.scripts]
poltype2 = "poltype.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["poltype*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
